@@ -16,10 +16,12 @@ public class OOMTest {
 
     private static List<Byte[]> result = new ArrayList<>();
 
+
+    // -Xms40m -Xmx40m -Xmn20m -Xss1m -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDateStamps  -XX:+PrintGCDetails -Xloggc:/Users/chenyuan/Documents/project/myself/learning/learning-jdk/src/main/java/com/rm13/jvm/OOMTestGC.log -XX:HeapDumpPath=/Users/chenyuan/Documents/project/myself/learning/learning-jdk/src/main/java/com/rm13/jvm
     public static void main(String[] args) throws InterruptedException, IOException {
 
         while (true){
-            result.add(new Byte[1024*1]);
+            result.add(new Byte[1024*1024]);
         }
     }
 }
